--- a/css/shop_style.css
+++ b/css/shop_style.css
@@ -247,8 +247,8 @@ footer a:hover {
 
 .header-container {
     width: 100%;
-    height: calc(100vh - min(10.5vw, 20vh));
     background-color: var(--clr-white-green);
+    height: auto;
 }
 
 
@@ -256,11 +256,6 @@ footer a:hover {
 
 /* baner style start */
 
-.header-container {
-    width: 100%;
-    background-color: #fff;
-    height: auto;
-}
 .head-baner {
     display: flex;
     justify-content: center;
@@ -645,18 +640,39 @@ footer a:hover {
 
 
 
+@media (max-width:1241px) {
+    .my-container {
+        width: 80%;
+    }
+    .products-grid{
+        grid-template-columns: auto auto auto;
+        margin-bottom: 12vh;
+    }
+}
+@media (max-width: 820px) {
+    .my-container {
+        width: 80%;
+    }
+    .products-grid{
+        grid-template-columns: auto auto;
+        /* margin-bottom: 25vh; */
+        row-gap: 1.2%;
+    }
+}
 
+@media (max-width:540px) {
+    .products-grid{
+        grid-template-columns: auto;
+        margin-bottom: 100vh;
+    }
+    .products-grid>div {
+        max-width: 550px;
+        height: 400px;
+    }
+
+}   
 
 @media (max-width: 480px) {
-
-    .grid-box {
-        justify-content: center;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 255px;
-        grid-template-rows: 250px 250px 250px 250px ;
-        gap: 20px;
-    }
 
     .head-baner img{
         display: none;
