--- a/css/shop_single_style.css
+++ b/css/shop_single_style.css
@@ -292,19 +292,21 @@ footer a:hover {
 .product-select {
     margin-top: 8%;
     width: 100%;
-    height: 55vh;
-    background-color: royalblue;
+    min-height: 600px;
+    /* background-color: royalblue; */
     display: grid;
-    grid-template-columns: 46% 48%;
-    column-gap: 6%;
+    grid-template-columns: 45% 51%;
+    column-gap: 4%;
 }
 
 .product-img {
+    /* max-width: 600px; */
     border-radius: 2vw;
     background: url(/img/shop/products/Photo-3.svg), lightgray 50% / cover no-repeat;
     background-blend-mode: multiply;
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     height: 100%;
     background-color: var(--clr-white-gray);
     position: relative;
@@ -330,9 +332,93 @@ footer a:hover {
 }
 
 .product-text {
-    background-color: lightgreen;
+    /* background-color: lightgreen;  */
+    display: flex;
+    align-items: center;
+}
+.prices-container {
+    padding-right: 5%;
 }
 
+.prices-container>h3 {
+    color: #274C5B;
+    font-family: Roboto;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 0.4vw;
+}
+
+.prices>span:first-child {
+    color: #B8B8B8;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration: line-through;
+    margin-right: 0.3vw;
+}
+
+.prices>span:last-child {
+    color: #274C5B;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.prices-container>p {
+    margin-top: 1vw;
+    margin-bottom: 1.5vw;
+    color: #525C60;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%; /* 29.772px */
+}
+.pick-scale{
+    display: flex;
+    align-items: center;
+    gap: 0.9vw;
+}
+.pick-scale>span {
+    color: #274C5B;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.pick-scale>input {
+    height: min(7.5vh, 4.3vw);
+    color: #274C5B;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 6.8vw;
+    padding: 1.4vw 1vw 1.4vw 3.2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: .7vw;
+    border: 2px solid #274C5B;
+    background: #FFF;   
+}
+.pick-scale>button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+}
 
 /**************************************************************************************************/
 
